CS407-F20-binitshr/Final/expeditionsParser.js
// Generated from expeditions.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var expeditionsListener = require('./expeditionsListener').expeditionsListener;
var expeditionsVisitor = require('./expeditionsVisitor').expeditionsVisitor;

var grammarFileName = "expeditions.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'expedition_id'", "'peak_id'", "'peak_name'", 
                     "'year'", "'season'", "'basecamp_date'", "'highpoint_date'", 
                     "'termination_date'", "'termination_reason'", "'highpoint_meters'", 
                     "'members'", "'member_deaths'", "'hired_staff'", "'hired_staff_deaths'", 
                     "'oxygen_used'", "'trekking_agency'", "'|'", "','" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      "SEP", "NEWLINE", "NUMBER", "TEXT", "INFO", "STRING" ];

var ruleNames =  [ "file", "hdr", "row", "expedition_id", "peak_id", "peak_name", 
                   "year", "season", "basecamp_date", "highpoint_date", 
                   "termination_date", "termination_reason", "highpoint_meters", 
                   "members", "member_deaths", "hired_staff", "hired_staff_deaths", 
                   "oxygen_used", "trekking_agency", "field", "field_list", 
                   "number", "info" ];

function expeditionsParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

expeditionsParser.prototype = Object.create(antlr4.Parser.prototype);
expeditionsParser.prototype.constructor = expeditionsParser;

Object.defineProperty(expeditionsParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

expeditionsParser.EOF = antlr4.Token.EOF;
expeditionsParser.T__0 = 1;
expeditionsParser.T__1 = 2;
expeditionsParser.T__2 = 3;
expeditionsParser.T__3 = 4;
expeditionsParser.T__4 = 5;
expeditionsParser.T__5 = 6;
expeditionsParser.T__6 = 7;
expeditionsParser.T__7 = 8;
expeditionsParser.T__8 = 9;
expeditionsParser.T__9 = 10;
expeditionsParser.T__10 = 11;
expeditionsParser.T__11 = 12;
expeditionsParser.T__12 = 13;
expeditionsParser.T__13 = 14;
expeditionsParser.T__14 = 15;
expeditionsParser.T__15 = 16;
expeditionsParser.T__16 = 17;
expeditionsParser.SEP = 18;
expeditionsParser.NEWLINE = 19;
expeditionsParser.NUMBER = 20;
expeditionsParser.TEXT = 21;
expeditionsParser.INFO = 22;
expeditionsParser.STRING = 23;

expeditionsParser.RULE_file = 0;
expeditionsParser.RULE_hdr = 1;
expeditionsParser.RULE_row = 2;
expeditionsParser.RULE_expedition_id = 3;
expeditionsParser.RULE_peak_id = 4;
expeditionsParser.RULE_peak_name = 5;
expeditionsParser.RULE_year = 6;
expeditionsParser.RULE_season = 7;
expeditionsParser.RULE_basecamp_date = 8;
expeditionsParser.RULE_highpoint_date = 9;
expeditionsParser.RULE_termination_date = 10;
expeditionsParser.RULE_termination_reason = 11;
expeditionsParser.RULE_highpoint_meters = 12;
expeditionsParser.RULE_members = 13;
expeditionsParser.RULE_member_deaths = 14;
expeditionsParser.RULE_hired_staff = 15;
expeditionsParser.RULE_hired_staff_deaths = 16;
expeditionsParser.RULE_oxygen_used = 17;
expeditionsParser.RULE_trekking_agency = 18;
expeditionsParser.RULE_field = 19;
expeditionsParser.RULE_field_list = 20;
expeditionsParser.RULE_number = 21;
expeditionsParser.RULE_info = 22;


function FileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_file;
    return this;
}

FileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileContext.prototype.constructor = FileContext;

FileContext.prototype.hdr = function() {
    return this.getTypedRuleContext(HdrContext,0);
};

FileContext.prototype.EOF = function() {
    return this.getToken(expeditionsParser.EOF, 0);
};

FileContext.prototype.row = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(RowContext);
    } else {
        return this.getTypedRuleContext(RowContext,i);
    }
};

FileContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterFile(this);
	}
};

FileContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitFile(this);
	}
};

FileContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitFile(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.FileContext = FileContext;

expeditionsParser.prototype.file = function() {

    var localctx = new FileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, expeditionsParser.RULE_file);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.hdr();
        this.state = 48; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 47;
            this.row();
            this.state = 50; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << expeditionsParser.SEP) | (1 << expeditionsParser.TEXT) | (1 << expeditionsParser.STRING))) !== 0));
        this.state = 52;
        this.match(expeditionsParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function HdrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_hdr;
    return this;
}

HdrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HdrContext.prototype.constructor = HdrContext;

HdrContext.prototype.SEP = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(expeditionsParser.SEP);
    } else {
        return this.getToken(expeditionsParser.SEP, i);
    }
};


HdrContext.prototype.NEWLINE = function() {
    return this.getToken(expeditionsParser.NEWLINE, 0);
};

HdrContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterHdr(this);
	}
};

HdrContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitHdr(this);
	}
};

HdrContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitHdr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.HdrContext = HdrContext;

expeditionsParser.prototype.hdr = function() {

    var localctx = new HdrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, expeditionsParser.RULE_hdr);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this.match(expeditionsParser.T__0);
        this.state = 55;
        this.match(expeditionsParser.SEP);
        this.state = 56;
        this.match(expeditionsParser.T__1);
        this.state = 57;
        this.match(expeditionsParser.SEP);
        this.state = 58;
        this.match(expeditionsParser.T__2);
        this.state = 59;
        this.match(expeditionsParser.SEP);
        this.state = 60;
        this.match(expeditionsParser.T__3);
        this.state = 61;
        this.match(expeditionsParser.SEP);
        this.state = 62;
        this.match(expeditionsParser.T__4);
        this.state = 63;
        this.match(expeditionsParser.SEP);
        this.state = 64;
        this.match(expeditionsParser.T__5);
        this.state = 65;
        this.match(expeditionsParser.SEP);
        this.state = 66;
        this.match(expeditionsParser.T__6);
        this.state = 67;
        this.match(expeditionsParser.SEP);
        this.state = 68;
        this.match(expeditionsParser.T__7);
        this.state = 69;
        this.match(expeditionsParser.SEP);
        this.state = 70;
        this.match(expeditionsParser.T__8);
        this.state = 71;
        this.match(expeditionsParser.SEP);
        this.state = 72;
        this.match(expeditionsParser.T__9);
        this.state = 73;
        this.match(expeditionsParser.SEP);
        this.state = 74;
        this.match(expeditionsParser.T__10);
        this.state = 75;
        this.match(expeditionsParser.SEP);
        this.state = 76;
        this.match(expeditionsParser.T__11);
        this.state = 77;
        this.match(expeditionsParser.SEP);
        this.state = 78;
        this.match(expeditionsParser.T__12);
        this.state = 79;
        this.match(expeditionsParser.SEP);
        this.state = 80;
        this.match(expeditionsParser.T__13);
        this.state = 81;
        this.match(expeditionsParser.SEP);
        this.state = 82;
        this.match(expeditionsParser.T__14);
        this.state = 83;
        this.match(expeditionsParser.SEP);
        this.state = 84;
        this.match(expeditionsParser.T__15);
        this.state = 85;
        this.match(expeditionsParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function RowContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_row;
    return this;
}

RowContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RowContext.prototype.constructor = RowContext;

RowContext.prototype.expedition_id = function() {
    return this.getTypedRuleContext(Expedition_idContext,0);
};

RowContext.prototype.SEP = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(expeditionsParser.SEP);
    } else {
        return this.getToken(expeditionsParser.SEP, i);
    }
};


RowContext.prototype.peak_id = function() {
    return this.getTypedRuleContext(Peak_idContext,0);
};

RowContext.prototype.peak_name = function() {
    return this.getTypedRuleContext(Peak_nameContext,0);
};

RowContext.prototype.year = function() {
    return this.getTypedRuleContext(YearContext,0);
};

RowContext.prototype.season = function() {
    return this.getTypedRuleContext(SeasonContext,0);
};

RowContext.prototype.basecamp_date = function() {
    return this.getTypedRuleContext(Basecamp_dateContext,0);
};

RowContext.prototype.highpoint_date = function() {
    return this.getTypedRuleContext(Highpoint_dateContext,0);
};

RowContext.prototype.termination_date = function() {
    return this.getTypedRuleContext(Termination_dateContext,0);
};

RowContext.prototype.termination_reason = function() {
    return this.getTypedRuleContext(Termination_reasonContext,0);
};

RowContext.prototype.highpoint_meters = function() {
    return this.getTypedRuleContext(Highpoint_metersContext,0);
};

RowContext.prototype.members = function() {
    return this.getTypedRuleContext(MembersContext,0);
};

RowContext.prototype.member_deaths = function() {
    return this.getTypedRuleContext(Member_deathsContext,0);
};

RowContext.prototype.hired_staff = function() {
    return this.getTypedRuleContext(Hired_staffContext,0);
};

RowContext.prototype.hired_staff_deaths = function() {
    return this.getTypedRuleContext(Hired_staff_deathsContext,0);
};

RowContext.prototype.oxygen_used = function() {
    return this.getTypedRuleContext(Oxygen_usedContext,0);
};

RowContext.prototype.trekking_agency = function() {
    return this.getTypedRuleContext(Trekking_agencyContext,0);
};

RowContext.prototype.NEWLINE = function() {
    return this.getToken(expeditionsParser.NEWLINE, 0);
};

RowContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterRow(this);
	}
};

RowContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitRow(this);
	}
};

RowContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitRow(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.RowContext = RowContext;

expeditionsParser.prototype.row = function() {

    var localctx = new RowContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, expeditionsParser.RULE_row);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this.expedition_id();
        this.state = 88;
        this.match(expeditionsParser.SEP);
        this.state = 89;
        this.peak_id();
        this.state = 90;
        this.match(expeditionsParser.SEP);
        this.state = 91;
        this.peak_name();
        this.state = 92;
        this.match(expeditionsParser.SEP);
        this.state = 93;
        this.year();
        this.state = 94;
        this.match(expeditionsParser.SEP);
        this.state = 95;
        this.season();
        this.state = 96;
        this.match(expeditionsParser.SEP);
        this.state = 97;
        this.basecamp_date();
        this.state = 98;
        this.match(expeditionsParser.SEP);
        this.state = 99;
        this.highpoint_date();
        this.state = 100;
        this.match(expeditionsParser.SEP);
        this.state = 101;
        this.termination_date();
        this.state = 102;
        this.match(expeditionsParser.SEP);
        this.state = 103;
        this.termination_reason();
        this.state = 104;
        this.match(expeditionsParser.SEP);
        this.state = 105;
        this.highpoint_meters();
        this.state = 106;
        this.match(expeditionsParser.SEP);
        this.state = 107;
        this.members();
        this.state = 108;
        this.match(expeditionsParser.SEP);
        this.state = 109;
        this.member_deaths();
        this.state = 110;
        this.match(expeditionsParser.SEP);
        this.state = 111;
        this.hired_staff();
        this.state = 112;
        this.match(expeditionsParser.SEP);
        this.state = 113;
        this.hired_staff_deaths();
        this.state = 114;
        this.match(expeditionsParser.SEP);
        this.state = 115;
        this.oxygen_used();
        this.state = 116;
        this.match(expeditionsParser.SEP);
        this.state = 117;
        this.trekking_agency();
        this.state = 118;
        this.match(expeditionsParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Expedition_idContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_expedition_id;
    return this;
}

Expedition_idContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Expedition_idContext.prototype.constructor = Expedition_idContext;

Expedition_idContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Expedition_idContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterExpedition_id(this);
	}
};

Expedition_idContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitExpedition_id(this);
	}
};

Expedition_idContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitExpedition_id(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.Expedition_idContext = Expedition_idContext;

expeditionsParser.prototype.expedition_id = function() {

    var localctx = new Expedition_idContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, expeditionsParser.RULE_expedition_id);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 120;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Peak_idContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_peak_id;
    return this;
}

Peak_idContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Peak_idContext.prototype.constructor = Peak_idContext;

Peak_idContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Peak_idContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterPeak_id(this);
	}
};

Peak_idContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitPeak_id(this);
	}
};

Peak_idContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitPeak_id(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.Peak_idContext = Peak_idContext;

expeditionsParser.prototype.peak_id = function() {

    var localctx = new Peak_idContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, expeditionsParser.RULE_peak_id);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 122;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Peak_nameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_peak_name;
    return this;
}

Peak_nameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Peak_nameContext.prototype.constructor = Peak_nameContext;

Peak_nameContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Peak_nameContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterPeak_name(this);
	}
};

Peak_nameContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitPeak_name(this);
	}
};

Peak_nameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitPeak_name(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.Peak_nameContext = Peak_nameContext;

expeditionsParser.prototype.peak_name = function() {

    var localctx = new Peak_nameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, expeditionsParser.RULE_peak_name);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 124;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function YearContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_year;
    return this;
}

YearContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
YearContext.prototype.constructor = YearContext;

YearContext.prototype.number = function() {
    return this.getTypedRuleContext(NumberContext,0);
};

YearContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

YearContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterYear(this);
	}
};

YearContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitYear(this);
	}
};

YearContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitYear(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.YearContext = YearContext;

expeditionsParser.prototype.year = function() {

    var localctx = new YearContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, expeditionsParser.RULE_year);
    try {
        this.state = 128;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case expeditionsParser.NUMBER:
            this.enterOuterAlt(localctx, 1);
            this.state = 126;
            this.number();
            break;
        case expeditionsParser.SEP:
        case expeditionsParser.TEXT:
        case expeditionsParser.STRING:
            this.enterOuterAlt(localctx, 2);
            this.state = 127;
            this.field();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SeasonContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_season;
    return this;
}

SeasonContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SeasonContext.prototype.constructor = SeasonContext;

SeasonContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

SeasonContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterSeason(this);
	}
};

SeasonContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitSeason(this);
	}
};

SeasonContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitSeason(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.SeasonContext = SeasonContext;

expeditionsParser.prototype.season = function() {

    var localctx = new SeasonContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, expeditionsParser.RULE_season);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 130;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Basecamp_dateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_basecamp_date;
    return this;
}

Basecamp_dateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Basecamp_dateContext.prototype.constructor = Basecamp_dateContext;

Basecamp_dateContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Basecamp_dateContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterBasecamp_date(this);
	}
};

Basecamp_dateContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitBasecamp_date(this);
	}
};

Basecamp_dateContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitBasecamp_date(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.Basecamp_dateContext = Basecamp_dateContext;

expeditionsParser.prototype.basecamp_date = function() {

    var localctx = new Basecamp_dateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, expeditionsParser.RULE_basecamp_date);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 132;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Highpoint_dateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_highpoint_date;
    return this;
}

Highpoint_dateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Highpoint_dateContext.prototype.constructor = Highpoint_dateContext;

Highpoint_dateContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Highpoint_dateContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterHighpoint_date(this);
	}
};

Highpoint_dateContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitHighpoint_date(this);
	}
};

Highpoint_dateContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitHighpoint_date(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.Highpoint_dateContext = Highpoint_dateContext;

expeditionsParser.prototype.highpoint_date = function() {

    var localctx = new Highpoint_dateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, expeditionsParser.RULE_highpoint_date);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 134;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Termination_dateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_termination_date;
    return this;
}

Termination_dateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Termination_dateContext.prototype.constructor = Termination_dateContext;

Termination_dateContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Termination_dateContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterTermination_date(this);
	}
};

Termination_dateContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitTermination_date(this);
	}
};

Termination_dateContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitTermination_date(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.Termination_dateContext = Termination_dateContext;

expeditionsParser.prototype.termination_date = function() {

    var localctx = new Termination_dateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, expeditionsParser.RULE_termination_date);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 136;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Termination_reasonContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = expeditionsParser.RULE_termination_reason;
    return this;
}

Termination_reasonContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Termination_reasonContext.prototype.constructor = Termination_reasonContext;

Termination_reasonContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Termination_reasonContext.prototype.info = function() {
    return this.getTypedRuleContext(InfoContext,0);
};

Termination_reasonContext.prototype.enterRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.enterTermination_reason(this);
	}
};

Termination_reasonContext.prototype.exitRule = function(listener) {
    if(listener instanceof expeditionsListener ) {
        listener.exitTermination_reason(this);
	}
};

Termination_reasonContext.prototype.accept = function(visitor) {
    if ( visitor instanceof expeditionsVisitor ) {
        return visitor.visitTermination_reason(this);
    } else {
        return visitor.visitChildren(this);
    }
};




expeditionsParser.Termination_reasonContext = Termination_reasonContext;

expeditionsParser.prototype.termination_reason = function() {

    var localctx = new Termination_reasonContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, expeditionsParser.RULE_termination_reason);
    try {
        this.state = 140;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case expeditionsParser.SEP:
        case expeditionsParser.TEXT:
        case expeditionsParser.STRING:
            this.enterOuterAlt(localctx, 1);
            this.state = 138;
            this.field();
            break;
        case expeditionsParser.INFO:
            this.enterOuterAlt(localctx, 2);
            this.state = 139;
            this.info();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

